--- a/form.html
+++ b/form.html
@@ -97,9 +97,9 @@
             messageName: 'UserInputReady',
             processInstanceId: processInstanceId,
             processVariables: {
-              recipient: { value: recipient, type: 'String' },
-              amount: { value: amount, type: 'Double' },
-              message: { value: message, type: 'String' }
+              varReceive: { value: recipient, type: 'String' },
+              varAmount: { value: amount, type: 'Double' },
+              varMessage: { value: message, type: 'String' }
             }
           })
         });
