Letzte Änderungen vor der Abgabe

--- a/form.html
+++ b/form.html
@@ -32,8 +32,8 @@
     <select id="recipient">
       <option value="">Empfänger auswählen …</option>
       <option value="user2@example.com">User 2 (user2@example.com)</option>
-      <option value="max.mustermann@email.com">Max Mustermann</option>
-      <option value="anna.mueller@email.com">Anna Müller</option>
+      <option value="levin.wiederkehr@email.com">Levin Wiederkehr</option>
+      <option value="noah.burren@email.com">Noah Burren</option>
     </select>
 
     <label for="amount">Betrag (CHF)</label>
